with_gpu.err
module: loading 'cuda/12.2.2'
module: cuda: To use: module load gcc/10.2
module: loading 'gcc/10.2'
module: gcc: "Note: loading the gcc module overrides the gcc version on the system.  If you want to revert to the version of gcc provided by the OS, unload the gcc module."
module: unloading 'python/3.9.0'
module: loading 'python/3.9.0'
module: unloading 'opencv/4.5.5'
module: loading 'opencv/4.5.5'
module: opencv: This opencv version is without CUDA support.
  File "./ppmtojpg.py", line 26
    _, h, w, *pixels = map(int, re.findall(r'[0-9]+', contents))
             ^
SyntaxError: invalid syntax
